--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,7 +28,7 @@ body{
     
 }
 #showcase{
-    background-image: url('../img/my_pic.jpg');
+    background-image: url('../img/bground.jpg');
     position: relative; 
     min-height: 900px;  
     
